syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "ForwardType.proto";
import "Vector.proto";

// CmdId: 332
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message EvtCreateGadgetNotify {
	ForwardType forward_type = 8;
	uint32 entity_id = 14;
	uint32 config_id = 11;
	uint32 camp_id = 13;
	uint32 camp_type = 3;
	Vector init_pos = 15;
	Vector init_euler_angles = 5;
	uint64 guid = 1;
	uint32 owner_entity_id = 2;
	uint32 target_entity_id = 7;
	bool is_async_load = 9;
	uint32 target_lock_point_index = 4;
	uint32 room_id = 10;
	uint32 prop_owner_entity_id = 6;
	bool sight_group_with_owner = 12;
	bool CEGHBCJMNFJ = 1011;
	bool NGANCEBKNKC = 1304;
	repeated uint32 FCFECGFHLAD = 1525;
	repeated uint32 GEHIKJLBKAH = 1637;
}
